Rename deprecated Configuration to LegacyConfiguration
Rename deprecated Configuration to LegacyConfiguration. This clarifies
this instance will be removed entirely.